# pyfile-tracker

./: main.py  pyproject.toml  readme.md
src/pyfile_tracker/: cli.py  main.py
